# statimat_importer

./: .gitignore  6632.xml  GrStat.all  README.md  TODO.md  edit.sh  out.xml  pyproject.toml  setup.py  statimat_input.py  statimat_input.spec  whitelist.txt
docs/: 6632.xml  GrStat.all  GrStat2.all  Mail_Output_to_XML.eml
sattler/: __init__.py  _main.py  _statimat_export.py  _statimat_import.py
tests/: out_xml_no_dtGroup.xml  out_xml_tag_exists.xml  test_sattler_import.py  test_sattler_import_export.py
