[tool.poetry]
name = "sattler"
version = "0.1.0"
description = "A simple data extractor"
authors = ["Robert Ulmer <robert.ulmer@frontexperts.com>"]
license = "gpl-3.0.md"
readme = "README.md"
packages = [ {include = "sattler"} ]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.scripts]
statimat_input = 'sattler:main'

[tool.poetry.group.dev.dependencies]
black = "^24.1.1"
flake8 = "^7.0.0"
flake8-docstrings = "^1.7.0"
flake8-spellcheck = "^0.28.0"
isort = "^5.13.2"
pytest = "^8.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
[tool.isort]
profile = "black"
multi_line_output = 3
py_version = 27
[tool.flake8]
line-length = 79
docstring-convention = "pep257"
select = "D417"
spellcheck = true
dictionaries="en_US,python,technical"
spellcheck-targets="comments"
